<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.animetoon.app.ui.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription=""
                android:scaleType="centerCrop" />

            <!-- Gradient overlay view -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient" /> <!-- Reference your gradient drawable -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Hello details"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:padding="16dp">

                <!-- Back Button -->
                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circular_transparent_background"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white" />

                <!-- Favorite Button -->
                <ImageButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circular_transparent_background"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/ic_favorite"
                    app:tint="@color/white" />
            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/creator"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:textColor="@color/LightGray"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"

                    android:text="@string/reads"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_reads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:textColor="@color/LightGray"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/rating"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center"
                    android:textColor="@color/LightGray"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            app:dividerColor="@color/LightGray"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_regular"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            app:dividerColor="@color/LightGray"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/rate_this_webtoon"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginBottom="16dp"
                android:numStars="5"
                android:progressBackgroundTint="@color/LightGray"
                android:progressTint="@android:color/holo_orange_dark"
                android:rating="0"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:stepSize="1" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="40dp"
                android:background="@drawable/button_background"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
